src/test/ui/rfc-2627-raw-dylib/raw-dylib-windows-only.stderr
warning: the feature `raw_dylib` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/raw-dylib-windows-only.rs:3:12
   |
LL | #![feature(raw_dylib)]
   |            ^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #58713 <https://github.com/rust-lang/rust/issues/58713> for more information

error: `#[link(...)]` with `kind = "raw-dylib"` only supported on Windows
  --> $DIR/raw-dylib-windows-only.rs:5:1
   |
LL | #[link(name = "foo", kind = "raw-dylib")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

